Wed May 03 03:30:51 1995  Chris Provenzano (proven@mit.edu)

        * sserver.c: (krb5_recvauth()): No longer needs the rc_type arg.

Tue Apr 25 21:41:46 1995 Chris Provenzano (proven@mit.edu)

	* sserver.c: Initialize auth_context to NULL before using.

Mon Mar 27 07:56:26 1995 Chris Provenzano (proven@mit.edu)

        * sserver.c: Use new calling convention for krb5_recvauth().

Thu Mar  2 12:27:36 1995  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in (ISODELIB): Remove reference to $(ISODELIB).

Wed Mar  1 11:57:12 1995  Theodore Y. Ts'o  <tytso@dcl>

	* configure.in: Remove ISODE_INCLUDE, replace check for -lsocket
		and -lnsl with WITH_NETLIB check.

Tue Feb 28 01:59:17 1995  John Gilmore  (gnu at toad.com)

	* sserver.c:  Avoid <krb5/...> and <com_err.h> includes.

Mon Oct  3 19:16:14 1994  Theodore Y. Ts'o  (tytso@dcl)

	* Makefile.in: Use $(srcdir) to find manual page for make install.

Wed Sep 28 23:49:10 1994  Theodore Y. Ts'o  (tytso@dcl)

	* Makefile.in: Relink executable when library changes.
